--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,1 +1,13 @@
-//
+// Styles
+
+@import "node_modules/bulma/bulma";
+@import "node_modules/font-awesome/scss/font-awesome";
+
+.is-current {
+    background-color: $primary !important;
+    border-color: darken($primary, 10%) !important;
+}
+
+.pagination-link:focus {
+    border-color: darken($primary, 10%) !important;
+}
